--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:exported="false"
             android:parentActivityName=".HomeActivity" />
         <activity
-            android:name=".EstadosActivity"
+            android:name=".TreinamentosActivity"
             android:exported="false"
             android:parentActivityName=".HomeActivity" />
         <activity
