--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BaseApp">
+        android:theme="@style/Theme.BaseApp"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true">
+
         <activity
             android:name=".CadastroActivity"
             android:exported="false"
@@ -20,6 +23,10 @@
             android:parentActivityName=".HomeActivity" />
         <activity
             android:name=".TreinamentosActivity"
+            android:exported="false"
+            android:parentActivityName=".HomeActivity" />
+        <activity
+            android:name=".CursosActivity"
             android:exported="false"
             android:parentActivityName=".HomeActivity" />
         <activity
